<resources>
    <string name="app_name">Clocks</string>
    <string name="clock_preferences">Clock Preferences</string>
    <string name="themes">Themes</string>
    <string name="clock_color">Clock Color</string>
    <string name="background">Background</string>
    <string name="clock_font">Clock font</string>
    <string name="when_portrait_mode">When in portrait mode</string>
    <string name="clock_orientation">Clock orientation</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="show_leading_zero_for_hours">Show leading zero for hours</string>
    <string name="clock_appereance">Clock appearance</string>
    <string name="night_mode">Night mode (low brihtness)</string>
    <string name="vertical_clock">Vertical clock</string>
    <string name="horizontal_clock">Horizontal clock</string>
    <string name="seperator_style">Seperator style</string>
    <string name="show_am_and_pm">Show AM and PM symbols</string>
    <string name="show_seperator_landscape">Show separator when in landscape</string>
    <string name="blinking">Blinking</string>
    <string name="not_blinking">Not blinking</string>
    <string name="show_seperator_portrait">Show separator when in portrait</string>
    <string name="show_weather_information">Show weather information</string>
    <string name="weather_information">Weather Settings</string>
    <string name="extended">Extended</string>
    <string name="compact">Compact</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="visualizator_preferences">Visualizator Preferences</string>
    <string name="show_seconds">Show seconds</string>
    <string name="show_date">Show date</string>
    <string name="date_format">Date format</string>
    <string name="show_day">Show day</string>
    <string name="show_day_name_full">Show day name in full</string>
    <string name="hide_status_bar">Hide status bar</string>
    <string name="auto_hide_settings_icon">Automatically hide setting icon</string>
    <string name="visualization_problems">Visualization problems? Try changing the graphics acceleration parameters</string>
    <string name="functionalities">Functionalities</string>
    <string name="clock_time_from_the_world">Clock time from the world</string>
    <string name="set_language">Set language</string>
    <string name="gtm_settings">GTM Settings</string>
    <string name="set_screen_saver">Set screensaver - the app starts automatically when the phone is charging</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="white">White</string>
    <string name="light_blue">Light Blue</string>
    <string name="custom_color">Custom color</string>
    <string name="manual_hex_color">Manual (hex color)</string>
    <string name="random">Random</string>
    <string name="problems_with_colors">Problems with colors?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="Create">Create</string>
    <string name="black">Black</string>
    <string name="gallery">Gallery</string>
    <string name="web">Web</string>
    <string name="default_name">Default</string>
    <string name="old">Old</string>
    <string name="thick">Thick</string>
    <string name="ubuntu">Ubuntu</string>
    <string name="android">Android</string>
    <string name="Snipper">Snipper</string>
    <string name="courier">Courier</string>
    <string name="seven_segments">Seven segments</string>
    <string name="roboto">Roboto</string>
    <string name="roboto2">Roboto 2</string>
    <string name="applyToClockOnly">Apply to clock only</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="automatic">Automatic</string>
</resources>