<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="0dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.35"
                app:layout_constraintDimensionRatio="1:2.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.02"
                android:text="@string/clock_orientation"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <View
                android:id="@+id/vCrossLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_grey_66"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:layout_marginTop="@dimen/top_margin_10"
                />
            <RadioGroup
                android:id="@+id/rgColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintTop_toBottomOf="@+id/vCrossLine"
                app:layout_constraintBottom_toTopOf="@+id/btnOk"
                android:layout_marginTop="@dimen/top_margin_10"
                >
                <RadioButton
                    android:id="@+id/rbLandScape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/top_margin_10"
                    android:text="@string/landscape"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    />
                <RadioButton
                    android:id="@+id/rbPortrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/top_margin_10"
                    android:text="@string/portrait"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    />
                <RadioButton
                    android:id="@+id/rbAutomatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/top_margin_10"
                    android:text="@string/automatic"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/top_margin_10"
                android:text="@string/ok"
                android:textAllCaps="false"
                app:backgroundTint="@color/blue"
                android:paddingTop="@dimen/top_margin_10"
                android:paddingBottom="@dimen/top_margin_10"
                app:cornerRadius="@dimen/top_margin_10"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>